# EvalGen

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
evalgen/: evals.py  llm.py  streamlit.py
evalgen/prompts/: __init__.py  evaluate.jinja  generate_assertions.jinja  generate_criteria.jinja
