[tool.poetry]
name = "evalgen"
version = "0.1.0"
description = ""
authors = ["John Halz <john@validmind.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.4"
litellm = "^1.40.7"
openai = "^1.33.0"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
streamlit = "^1.35.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.2.2"
ruff = "^0.4.8"
watchdog = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
